Bug 1614243 - Make mfbt/DbgMacro.h use standard variadic macro syntax, not gcc/clang extension syntax.  r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D63283